# solana_aggregator

./: .gitignore  Cargo.toml  LICENSE  README.md  TASK.md
.github/workflows/: rust.yml
src/: aggregator.rs  api.rs  error.rs  lib.rs  main.rs  types.rs
src/blocks/: benchmark.rs  live.rs  mod.rs
src/source/: benchmark.rs  live.rs  mod.rs
src/storage/: memory.rs  mod.rs  sqlite.rs
tools/history/: Cargo.toml
tools/history/src/: main.rs
