[package]
name = "solana_aggregator"
version = "0.1.0"
authors = ["xdustinface <xdustinfacex@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/xdustinface/solana_aggregator"
readme = "README.md"
description = "Minimal and simplified data aggregator for Solana blockchain data"
keywords = ["crypto"]

[lib]
name = "solana_aggregator"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
log = "0.4.22"
simple_logger = "5.0.0"
serde = "1.0.208"
serde_json = "1.0.125"
solana-sdk = "2.0.6"
solana-client = "2.0.6"
solana-transaction-status = "2.0.6"
tokio = "1.39.3"
tokio-util = "0.7.11"
futures = "0.3.30"
rusqlite = "0.32.1"
thiserror = "1.0.63"
warp = "0.3.7"
