[package]
name = "history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana_aggregator = { path = "../../../solana_aggregator" }
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = "1.39.3"
toml = "0.8.19"
solana-client = "2.0.6"
